# diffusion_equation

./: .gitignore  CMakeLists.txt  Dockerfile  OneDimensionalDiffusion  README.md  TwoDimensionalDiffusion  build.sh  docker-compose.yml  docker_build.sh  graph.py  main.cpp  test.tp
cmake/: FindTP.cmake
example/one_dimensional_diffusion/: graph.py  test.tp
example/two_dimensional_diffusion/: O17_cell_value.csv  a.out  chroid_point.csv  create_sdf_calc.cpp  mesh_edit.cpp  phi_node_file.csv  point_sdf.csv  sdf_test.csv  solid_phi_node.csv  source_node.csv  test.csv  test.tp
example/two_dimensional_diffusion/input/: fluid_node_phi.csv  out_region.csv  solid_node_phi.csv  test.csv  vessel_cell_data.csv  vessel_node_phi.csv
include/: diffusion.hpp  one_diffusion.hpp  shapefunction.hpp  two_diffusion.hpp
src/: CMakeLists.txt  matrix.cpp
src/lib/: CMakeLists.txt  fileIO.cpp  matrix.cpp  two_dimensional.cpp
src/one_dimensional_diffusion/: CMakeLists.txt  main.cpp
src/two_dimensional_diffusion/: CMakeLists.txt  main.cpp
